Change background color on timer interrupt

--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body {
     -moz-animation-play-state: paused;
     -o-animation-play-state: paused;
     animation-play-state: paused;
+    background: firebrick;
 }
 
 .centered {
